Added GLSLImageProcessor that (mostly) uses Kotlin to implement GL Compute
Also:
- Makes sample complie against latest NDK
- Uses recent Gradle and wrapper versions

--- a/RenderScriptMigrationSample/app/src/main/res/values-v31/strings.xml
+++ b/RenderScriptMigrationSample/app/src/main/res/values-v31/strings.xml
@@ -4,6 +4,7 @@
         <item>@string/renderscript_intrinsics</item>
         <item>@string/renderscript_scripts</item>
         <item>@string/vulkan</item>
+        <item>@string/glsl</item>
         <item>@string/render_effect</item>
     </string-array>
 
